--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
   "require": {
     "php": ">=7.4"
   },
+  "scripts": {
+    "build": "bin/build.sh"
+  },
   "require-dev": {
     "php-stubs/wordpress-stubs": "^6.0"
   }
