--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,12 @@
     "php": ">=7.4"
   },
   "scripts": {
-    "build": "bin/build.sh"
+    "build": "bin/build.sh",
+    "dev": "bin/dev.sh",
+    "start": "docker-compose up -d",
+    "stop": "docker-compose down",
+    "restart": "docker-compose restart",
+    "logs": "docker-compose logs -f wordpress"
   },
   "require-dev": {
     "php-stubs/wordpress-stubs": "^6.0"
