--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   wordpress:
     image: wordpress:latest
-    container_name: wordpress-associados
+    container_name: wordpress
     ports:
       - "8080:80"
     environment:
@@ -10,13 +10,14 @@ services:
       - WORDPRESS_DB_PASSWORD=wordpress
       - WORDPRESS_DB_NAME=wordpress
     volumes:
-      - ./:/var/www/html/wp-content/plugins/associados-interativo
+      - wordpress_data:/var/www/html
+      - ./src:/var/www/html/wp-content/plugins/wp-associates
     depends_on:
       - db
 
   db:
     image: mysql:8.0
-    container_name: mysql-associados
+    container_name: mysql
     environment:
       - MYSQL_ROOT_PASSWORD=rootpassword
       - MYSQL_DATABASE=wordpress
@@ -26,4 +27,5 @@ services:
       - db_data:/var/lib/mysql
 
 volumes:
+  wordpress_data:
   db_data:
