--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
   "scripts": {
     "build": "bin/build.sh",
     "dev": "bin/dev.sh",
+    "setup": "bin/setup.sh",
     "start": "docker-compose up -d",
     "stop": "docker-compose down",
+    "clean": "docker-compose down -v",
     "restart": "docker-compose restart",
     "logs": "docker-compose logs -f wordpress"
   },
