feat: atualiza composer.json e styles.css para melhorias de configuração e estilo
- Adiciona configuração de timeout no composer.json para permitir execução sem limite de tempo.
- Modifica estilos da classe .associados-list em styles.css, ajustando alturas e margens para melhor apresentação e usabilidade.

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
   "require": {
     "php": ">=8.1"
   },
+  "config": {
+    "process-timeout": 0
+  },
   "scripts": {
     "build": "bin/build.sh",
     "dev": "bin/dev.sh",
