refactor: substitui 'docker-compose' por 'docker compose' em composer.json e README.md
- Atualiza os comandos de Docker para a nova sintaxe, garantindo consistência nas instruções de uso.
- Melhora a documentação no README.md para refletir as mudanças nos comandos de gerenciamento do ambiente.

--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
     "build": "bin/build.sh",
     "dev": "bin/dev.sh",
     "setup": "bin/setup.sh",
-    "start": "docker-compose up -d",
-    "stop": "docker-compose down",
-    "clean": "docker-compose down -v",
-    "restart": "docker-compose restart",
-    "logs": "docker-compose logs -f wordpress"
+    "start": "docker compose up -d",
+    "stop": "docker compose down",
+    "clean": "docker compose down -v",
+    "restart": "docker compose restart",
+    "logs": "docker compose logs -f wordpress"
   },
   "require-dev": {
     "php-stubs/wordpress-stubs": "^6.0"
