--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,17 @@ services:
       - WORDPRESS_DB_USER=wordpress
       - WORDPRESS_DB_PASSWORD=wordpress
       - WORDPRESS_DB_NAME=wordpress
+      - WORDPRESS_DEBUG=1
+      - WORDPRESS_DEBUG_LOG=1
+      - WORDPRESS_DEBUG_DISPLAY=1
+      - UPLOAD_MAX_FILESIZE=64M
+      - POST_MAX_SIZE=64M
+      - MAX_EXECUTION_TIME=300
+      - MEMORY_LIMIT=256M
     volumes:
       - wordpress_data:/var/www/html
       - ./src:/var/www/html/wp-content/plugins/wp-associates
+      - ./php.ini:/usr/local/etc/php/conf.d/uploads.ini
     depends_on:
       - db
 
