--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "logs": "docker compose logs -f wordpress"
   },
   "require-dev": {
-    "php-stubs/wordpress-stubs": "^6.0"
+    "php-stubs/wordpress-stubs": "^6.0",
+    "szepeviktor/phpstan-wordpress": "^2.0"
   }
 }
