--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
   },
   "require-dev": {
     "php-stubs/wordpress-stubs": "^6.0",
-    "szepeviktor/phpstan-wordpress": "^2.0"
+    "szepeviktor/phpstan-wordpress": "^2.0",
+    "php-stubs/acf-pro-stubs": "^6.5"
   }
 }
