--- a/phpstan.neon
+++ b/phpstan.neon
@@ -9,3 +9,4 @@ parameters:
         - '#Function wp_get_post_terms\(\) has no return type specified#'
     bootstrapFiles:
         - vendor/php-stubs/wordpress-stubs/wordpress-stubs.php
+        - vendor/php-stubs/acf-pro-stubs/acf-pro-stubs.php
