chore: update project configuration and dependencies
- Added `wpackagist` repository to `composer.json` for easier plugin management.
- Included `advanced-custom-fields` as a required dependency in `composer.json`.
- Updated `.gitignore` to exclude the `wp-content` directory.
- Modified `docker-compose.yml` to mount the `wp-content` directory for easier development.
- Enhanced `setup.sh` to activate the Advanced Custom Fields plugin during setup.

--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,21 @@
   "name": "associados/plugin",
   "description": "Plugin para registrar associados com mapa interativo",
   "type": "wordpress-plugin",
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://wpackagist.org"
+    }
+  ],
   "require": {
-    "php": ">=8.1"
+    "php": ">=8.1",
+    "wpackagist-plugin/advanced-custom-fields": "*"
   },
   "config": {
-    "process-timeout": 0
+    "process-timeout": 0,
+    "allow-plugins": {
+      "composer/installers": true
+    }
   },
   "scripts": {
     "build": "bin/build.sh",
