--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,11 @@
   "name": "associados/plugin",
   "description": "Plugin para registrar associados com mapa interativo",
   "type": "wordpress-plugin",
+  "autoload": {
+    "classmap": [
+      "src/"
+    ]
+  },
   "repositories": [
     {
       "type": "composer",
