chore: update .gitignore to improve project structure
- Added entries for IDE files and build directories to the .gitignore.
- Removed the exclusion of the wp-content directory to allow for better management of project assets.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
 .DS_Store
-.env
-/vendor/
-composer.lock
-/.build/
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Build
 *.zip
-/wp-content/
+dist/
+build/
+vendor/
