--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "php": ">=7.4"
   },
   "require-dev": {
-    "php-stubs/wordpress-stubs": "^6.0"
+    "php-stubs/wordpress-stubs": "^6.0",
+    "szepeviktor/phpstan-wordpress": "^2.0"
   },
   "scripts": {
     "build": "bin/build.sh",
