chore: add clean:build script to composer.json for improved build management
- Introduced a new script `clean:build` to remove `dist` and `build` directories, enhancing the build process by ensuring a clean state before building.

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "start": "docker compose up -d",
     "stop": "docker compose down",
     "clean": "docker compose down -v",
+    "clean:build": "rm -rf dist && rm -rf build && sleep 1 && echo '📁 Pasta dist e build limpas'",
     "restart": "docker compose restart",
     "logs": "docker compose logs -f wordpress"
   }
