feat: enhance Elementor support with new initialization methods
- Added `ElementorSupport` class to manage Elementor integration for custom post types.
- Implemented methods to initialize Elementor support and add it to custom post types.
- Updated PHPStan configuration to ignore new error patterns related to `ElementorSupport` class.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -9,5 +9,6 @@ parameters:
         - src/includes/Elementor/
     ignoreErrors:
         - '#Call to static method get_instance\(\) on an unknown class Associates\\Elementor\\DynamicTags#'
+        - '#Call to static method get_instance\(\) on an unknown class Associates\\Elementor\\ElementorSupport#'
     bootstrapFiles:
         - vendor/php-stubs/wordpress-stubs/wordpress-stubs.php
