refactor: streamline autoloading and enhance event shortcode functionality
- Updated autoloading logic in `wp-associates.php` to support Docker environments.
- Refactored `Plugin.php` to use aliases for better readability and maintainability.
- Removed redundant Elementor support code in `ElementorSupport.php`.
- Introduced a new `Shortcode` class in `Events` namespace to manage event display via shortcodes, including carousel functionality and improved rendering of event cards.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -7,8 +7,6 @@ parameters:
         - src
     excludePaths:
         - src/includes/Elementor/
-    ignoreErrors:
-        - '#Call to static method get_instance\(\) on an unknown class Associates\\Elementor\\DynamicTags#'
-        - '#Call to static method get_instance\(\) on an unknown class Associates\\Elementor\\ElementorSupport#'
+    ignoreErrors: []
     bootstrapFiles:
         - vendor/php-stubs/wordpress-stubs/wordpress-stubs.php
