chore: update build process and Docker configuration for plugin distribution
- Changed volume mapping in `docker-compose.yml` to use the `dist` directory for plugin assets.
- Enhanced `build.sh` to copy `composer.json` to the `dist` directory and regenerate the autoloader.
- Updated `setup.sh` to automate plugin building and page creation with Elementor templates.
- Added new landing page and loop templates for improved site structure and design.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - MEMORY_LIMIT=256M
     volumes:
       - wordpress_data:/var/www/html
-      - ./src:/var/www/html/wp-content/plugins/wp-associates
+      - ./dist:/var/www/html/wp-content/plugins/wp-associates
       - ./php.ini:/usr/local/etc/php/conf.d/uploads.ini
     depends_on:
       - db
